--- a/package.json
+++ b/package.json
@@ -48,43 +48,43 @@
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cross-spawn": "6.0.5",
-    "css-loader": "2.1.1",
+    "css-loader": "3.2.0",
     "deepmerge": "4.0.0",
-    "eslint": "5.15.3",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "4.1.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.0.0",
     "eslint-import-resolver-node": "0.3.2",
-    "eslint-plugin-flowtype": "3.4.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-flowtype": "4.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
     "express": "4.17.1",
-    "file-loader": "3.0.1",
+    "file-loader": "4.2.0",
     "find-cache-dir": "3.0.0",
     "http-proxy": "1.17.0",
     "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "0.5.0",
+    "mini-css-extract-plugin": "0.8.0",
     "mobile-detect": "1.4.3",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "1.0.0",
     "require-control": "2.2.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "7.2.0",
     "serialize-javascript": "1.7.0",
     "serve-favicon": "2.5.0",
-    "style-loader": "0.23.1",
-    "url-loader": "1.1.2",
-    "webpack": "4.29.6",
-    "webpack-dev-middleware": "3.6.1",
-    "webpack-hot-middleware": "2.24.3",
+    "style-loader": "1.0.0",
+    "url-loader": "2.1.0",
+    "webpack": "4.39.2",
+    "webpack-dev-middleware": "3.7.0",
+    "webpack-hot-middleware": "2.25.0",
     "webpack-manifest-plugin": "2.0.4",
     "which": "1.3.1"
   },
   "devDependencies": {
     "prettier": "1.18.2",
-    "react": "../../examunity/frontend/node_modules/react",
-    "react-dom": "../../examunity/frontend/node_modules/react-dom"
+    "react": "16.8.4",
+    "react-dom": "16.8.4"
   },
   "peerDependencies": {
     "react": ">=16.4.2",
@@ -92,7 +92,7 @@
     "react-hot-loader": ">=4.5.0"
   },
   "engines": {
-    "node": ">= 8",
+    "node": ">= 8.6",
     "npm": ">= 5"
   }
 }
