--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "postcss-loader": "3.0.0",
     "randomstring": "1.1.5",
     "raw-loader": "1.0.0",
+    "react-app-polyfill": "1.0.4",
     "require-control": "2.2.0",
     "sass-loader": "7.2.0",
     "serialize-javascript": "1.7.0",
