--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "universal",
     "webpack",
     "hot reloading",
-    "react hot loader",
+    "react refresh",
     "starter",
     "babel",
     "eslint",
@@ -39,16 +39,18 @@
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.7.0",
     "@babel/register": "7.7.0",
-    "autoprefixer": "9.8.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "babel-plugin-intlized-components": "0.2.1",
-    "clean-webpack-plugin": "3.0.0",
+    "browserslist": "4.17.0",
+    "clean-webpack-plugin": "4.0.0",
     "compression": "1.7.4",
     "cookie": "0.4.1",
     "cross-spawn": "7.0.3",
-    "css-loader": "3.2.0",
+    "css-loader": "6.2.0",
+    "css-minimizer-webpack-plugin": "3.0.2",
     "deepmerge": "4.2.2",
     "device-detector-js": "2.2.6",
     "eslint": "6.6.0",
@@ -61,39 +63,42 @@
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "1.7.0",
     "express": "4.17.1",
-    "file-loader": "4.2.0",
     "find-cache-dir": "3.3.1",
     "http-proxy": "1.18.1",
-    "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.14.1",
-    "postcss-loader": "3.0.0",
+    "mini-css-extract-plugin": "2.3.0",
+    "node-sass": "6.0.1",
+    "postcss": "8.3.6",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "6.1.1",
+    "postcss-normalize": "10.0.1",
+    "postcss-preset-env": "6.7.0",
+    "process": "0.11.10",
     "randomstring": "1.1.5",
-    "raw-loader": "1.0.0",
     "react-app-polyfill": "1.0.4",
     "require-control": "2.2.0",
-    "sass-loader": "8.0.0",
+    "sass-loader": "12.1.0",
     "serialize-javascript": "5.0.1",
-    "style-loader": "1.0.0",
-    "url-loader": "2.2.0",
-    "webpack": "4.41.2",
-    "webpack-dev-middleware": "3.7.2",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-manifest-plugin": "2.2.0",
+    "style-loader": "3.2.1",
+    "terser-webpack-plugin": "5.2.4",
+    "webpack": "5.53.0",
+    "webpack-dev-middleware": "5.1.0",
+    "webpack-hot-middleware": "2.25.1",
+    "webpack-manifest-plugin": "4.0.2",
     "which": "2.0.2"
   },
   "devDependencies": {
-    "prettier": "1.19.1",
-    "react": "16.8.4",
-    "react-dom": "16.8.4"
+    "prettier": "2.4.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-refresh": "0.10.0"
   },
   "peerDependencies": {
-    "react": ">=16.4.2",
-    "react-dom": ">=16.4.2",
-    "react-hot-loader": ">=4.5.0"
+    "react": ">=16.13.0",
+    "react-dom": ">=16.13.0",
+    "react-refresh": ">=0.10.0"
   },
   "engines": {
-    "node": ">= 8.6",
+    "node": ">= 10.13.0",
     "npm": ">= 5"
   }
 }
