--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "src"
   ],
   "dependencies": {
-    "@babel/cli": "7.15.4",
+    "@babel/cli": "7.15.7",
     "@babel/core": "7.15.5",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
@@ -66,6 +66,7 @@
     "find-cache-dir": "3.3.2",
     "http-proxy": "1.18.1",
     "mini-css-extract-plugin": "2.3.0",
+    "node-polyfill-webpack-plugin": "1.1.4",
     "node-sass": "6.0.1",
     "postcss": "8.3.6",
     "postcss-flexbugs-fixes": "5.0.2",
