--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "compression": "1.7.4",
     "cookie-parser": "1.4.6",
     "cross-spawn": "7.0.3",
+    "css-loader": "6.8.1",
     "deepmerge": "4.3.1",
     "device-detector-js": "3.0.3",
     "eslint": "7.32.0",
@@ -68,6 +69,7 @@
     "process": "0.11.10",
     "react-app-polyfill": "3.0.0",
     "serialize-javascript": "6.0.1",
+    "style-loader": "3.3.3",
     "terser-webpack-plugin": "5.3.9",
     "webpack": "^5.64.4",
     "webpack-dev-middleware": "6.1.1",
