--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "cross-spawn": "7.0.3",
     "css-loader": "6.8.1",
     "deepmerge": "4.3.1",
-    "device-detector-js": "3.0.3",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -66,9 +65,9 @@
     "http-proxy": "1.18.1",
     "module-alias": "2.2.3",
     "node-polyfill-webpack-plugin": "2.0.1",
+    "pkg-dir": "4.2.0",
     "process": "0.11.10",
     "react-app-polyfill": "3.0.0",
-    "serialize-javascript": "6.0.1",
     "style-loader": "3.3.3",
     "terser-webpack-plugin": "5.3.9",
     "webpack": "^5.64.4",
